# backend-test-task

./: .flake8  .gitignore  .pre-commit-config.yaml  .test.env  README.md  README_IMPLEMENTATION.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: test-linting.yml
scripts/: seed_chatbots.py
src/: main.py
src/app/: app.py
src/app/routers/: __init__.py
src/app/routers/api/: __init__.py  channels.py  hello_world.py  webhook.py
src/app/schemas/: __init__.py  channel.py  message.py
src/app/services/: __init__.py  channel_service.py  chat_service.py
src/app/tests/: README_DECORATORS.md  async_client.py  conftest.py  test_app.py  test_basic.py  test_channels.py  test_minimal.py  test_simple_db.py  test_webhook.py
src/core/: __init__.py  settings_model.py
src/core/database/: __init__.py  registry.py
src/core/database/models/: __init__.py  channel.py  chat_bot.py  dialogue.py
src/core/logs/: __init__.py  handlers.py
src/predict/: mock_llm_call.py
