[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "beanie (>=2.0.0,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "motor (>=3.7.1,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
ruff = "^0.12.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
